kubernetes/pod-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  namespace: expanse
spec:
  containers:
    - name: example-container
      image: busybox
      command: [ "sleep", "3600" ]
      volumeMounts:
        - mountPath: "/data"
          name: example-volume
  volumes:
    - name: example-volume
      persistentVolumeClaim:
        claimName: example-pvc
